--- a/HUB/static/gallery.css
+++ b/HUB/static/gallery.css
@@ -59,8 +59,8 @@ html {
   font-family: "Times New Roman", Times, serif !important;
 }
 .footer {
-  width: 100%;
-  padding-bottom: 1% !important;
+  width: 100% !important;
+  padding-bottom: 2% !important;
   background-color: #83c7c0;
   text-align: center;
   padding-top: 1% !important;
@@ -68,9 +68,20 @@ html {
 .footerWords {
   color: white;
   font-family: cursive;
-  margin-bottom: -0.2% !important;
+  margin-bottom: 3% !important;
 }
-
+.footer {
+  width: 100%;
+  padding-bottom: 1%;
+  background-color: #83c7c0;
+  text-align: center;
+  padding-top: 1%;
+}
+.footerWords {
+  color: white;
+  font-family: cursive;
+  margin-bottom: -0.2%;
+}
 /*gallery*/
 
 body {
@@ -115,3 +126,6 @@ body {
   max-width: 100%;
   height: 90% !important;
 }
+
+
+
