--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -80,7 +80,20 @@
       <button type="button" value="8" class="buttons">Blended Coffees</button>
     </div>
 
-    <div id="divid"></div>
+    <div id="divid">
+  <div class="grid-item">
+  <div class="shop-item">
+  <p class="shop-item-title">${d.name}</p>
+  <p> ${d.desc} </p>
+  <div class="shop-item-details">
+  <p class="shop-item-price">$${d.price}</p>
+  <button class="btn btn-primary shop-item-button" type="button">
+  ADD TO CART
+  </button>
+  
+  </div>
+  </div>`;
+</div>
   </body>
   <script>
     function openNav() {
