--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -11,9 +11,9 @@
   <div id="navBackground">
     <img class="theHubWord" src="/static/images/hub.png" />
     {%if user.is_authenticated%}
-      <a href="{%url 'logout'%}">Logout</a>
+    <a href="{%url 'logout'%}">Logout</a>
     {% else %}
-      <a href="{%url 'login-page'%}">Login</a>
+    <a href="{%url 'login-page'%}">Login</a>
     {% endif %}
 
     <a href="{%url 'gallery-page'%}">Gallery</a>
@@ -22,7 +22,7 @@
 
     <a href="{%url 'home-page'%}">Home</a>
     {%if user.is_authenticated%}
-      <a href="{%url 'dashboard-page'%}">Dashborad</a>
+    <a href="{%url 'dashboard-page'%}">Dashboard</a>
     {% endif %}
   </div>
   <body>
