--- a/HUB/templates/gallery.html
+++ b/HUB/templates/gallery.html
@@ -26,9 +26,17 @@
   <div id="navBackground">
     <img class="theHubWord" src="/static/images/hub.png" />
     <a href="{%url 'logout'%}">Logout</a>
+    {% else %}
+    <a href="{%url 'login-page'%}">Login</a>
+    {% endif %}
     <a href="{%url 'gallery-page'%}">Gallery</a>
     <a href="{%url 'cart-page'%}">Menu</a>
     <a href="{%url 'home-page'%}">Home</a>
+    {%if user.is_authenticated and not request.user|has_group:"Admin"%}
+    <a href="{%url 'dashboard-page'%}">Dashboard</a>
+    {% endif %} {%if request.user|has_group:"Admin"%}
+    <a href="{%url 'admin-page'%}">Orders</a>
+    {% endif %}
   </div>
   <body>
     <div class="container">
