--- a/HUB/static/register.css
+++ b/HUB/static/register.css
@@ -11,11 +11,14 @@ html {
 }
 
 .user_card_register {
-  width: 600px;
+  width: 650px;
   background: white;
   margin-top: 12.5em;
 
-  padding: 50px;
+  padding-left: 5px;
+  padding-right: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -26,52 +29,53 @@ html {
   display: flexbox;
   flex-direction: column;
   border-radius: 5px;
-  margin-left: 400px;
+  margin-left: 390px;
   color: black;
 }
+
 @media only screen and (max-width: 3000px) {
-  .user_card_register {
+  /* .user_card_register {
     margin-top: 7em;
     width: 1000px;
 
     font-size: 2em;
-  }
+  } */
 }
 @media only screen and (max-width: 1500px) {
-  .user_card_register {
+  /* .user_card_register {
     margin-top: 12.5em;
     width: 1000px;
 
     font-size: 1em;
-  }
+  } */
 }
 
 @media only screen and (max-width: 1200px) {
-  .user_card_register {
+  /* .user_card_register {
     margin-top: 10em;
     margin-left: 11em;
     width: 500px;
     font-size: 1.5em;
-  }
+  } */
 }
 @media only screen and (max-width: 770px) {
-  .user_card_register {
+  /* .user_card_register {
     margin-left: 17em;
     width: 400px;
     font-size: 10px;
-  }
+  } */
 }
 @media only screen and (max-width: 600px) {
-  .user_card_register {
+  /* .user_card_register {
     margin-left: 4em;
     width: 300px;
     font-size: 10px;
-  }
+  } */
 }
 @media only screen and (max-width: 340px) {
-  .user_card_register {
+  /* .user_card_register {
     width: 250px;
-  }
+  } */
 }
 
 @media only screen and (max-width: 1450px) {
@@ -134,16 +138,17 @@ html {
 }
 .register_word {
   text-align: center;
+  font-size: 130%;
 }
 @media only screen and (max-width: 3000px) {
-  .register_word {
+  /* .register_word {
     font-size: 0.5em;
-  }
+  } */
 }
 @media only screen and (max-width: 770px) {
-  .register_word {
+  /* .register_word {
     font-size: 1.5em;
-  }
+  } */
 }
 .move {
   text-align: center;
