--- a/HUB/static/styles.css
+++ b/HUB/static/styles.css
@@ -221,7 +221,7 @@ html {
   width: 60%;
   height: 75%;
   margin-left: 19%;
-  margin-bottom: -7%;
+  margin-bottom: -1%;
 }
 @media only screen and (max-width: 3000px) {
   .ourTeamBackground img {
@@ -234,7 +234,7 @@ html {
   width: 100%;
   height: 100%;
   color: white;
-  padding: 3px 0 120px 0;
+  padding: 3px 0 0 0;
   margin-top: 150px;
   margin-bottom: 200px;
 }
