--- a/HUB/templates/gallery.html
+++ b/HUB/templates/gallery.html
@@ -1,4 +1,4 @@
-{%load static %}
+{%load static %} {% load auth_extras%}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,6 +25,7 @@
 
   <div id="navBackground">
     <img class="theHubWord" src="/static/images/hub.png" />
+    {%if user.is_authenticated%}
     <a href="{%url 'logout'%}">Logout</a>
     {% else %}
     <a href="{%url 'login-page'%}">Login</a>
