--- a/HUB/templates/gallery.html
+++ b/HUB/templates/gallery.html
@@ -395,6 +395,7 @@
         </div>
       </div>
     </div>
+    <script src="{%static 'store.js' %}" async></script>
   </body>
   <footer class="footer">
     <p class="contactAlignNumber">662-902-6889</p>
